--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "webpack-react",
   "version": "1.0.0",
-  "main": "index.js",
   "author": "Josh Justice <me@codingitwrong.com>",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "lint": "eslint ."
+    "start": "webpack server --open --config webpack.dev.js",
+    "lint": "eslint .",
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1"
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.7.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
