--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
   "private": true,
   "scripts": {
     "start": "webpack server --open --config webpack.dev.js",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
@@ -23,6 +29,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
