--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^6.7.1",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "html-webpack-plugin": "^5.5.0",
