--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "webpack server --open --config webpack.dev.js",
     "lint": "eslint src",
+    "cypress": "cypress open",
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
@@ -16,8 +17,10 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
+    "cypress": "^10.11.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
