--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "webpack server --open --config webpack.dev.js",
     "lint": "eslint src",
     "cypress": "cypress open",
-    "build": "webpack --config webpack.prod.js && cp _redirects dist",
+    "cypress:run": "cypress run",
+    "build": "webpack --config webpack.prod.js",
     "deploy": "yarn build && netlify deploy --prod"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
@@ -26,8 +28,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.0",
     "prettier": "^2.7.1",
-    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
