--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint src",
     "cypress": "cypress open",
     "cypress:run": "cypress run",
-    "build": "webpack --config webpack.prod.js",
-    "deploy": "yarn build && netlify deploy --prod"
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
