--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo \\"::set-output name=dir::$(yarn cache dir)\\"
